<resources>
    <string name="app_name">Irregular Expressions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="label_settings">User Preferences</string>
    <string name="label_developer">Developer</string>
    <string name="label_about">About</string>
    <string name="label_version">Version</string>
    <string name="label_rate_app">Rate app</string>
    <string name="label_feedback">Send feedback</string>
    <string name="key_vibrations">Key vibrations</string>
    <string name="developer">Mobile First</string>
    <string name="feedback_summary">Report issues or request features</string>
    <string name="source_code">Source code</string>
    <string name="source_summary">PRs welcome</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="all_categories">all</string>
    <string name="animals">animals</string>
    <string name="faces">faces</string>
    <string name="lenny">lenny</string>
    <string name="lines">lines</string>
    <string name="intro_header">Welcome to\nIrregular Expressions\nkeyboard!</string>
    <string name="intro_subtitle">How to use</string>
    <string name="enable_keyboard">1. Enable Keyboard</string>
    <string name="select_keyboard">2. Select Keyboard</string>
    <string name="now_try_it">3. Now try it — type here:</string>
    <string name="setting_keyboard_layout">Keyboard layout</string>
    <string name="kbd_layout_qwerty">QWERTY</string>
    <string name="kbd_layout_azerty">AZERTY</string>
    <string name="kbd_layout_qwertz">QWERTZ</string>
    <string name="configure_styles">Configure text styles</string>
    <string name="configure_styles_help">How to configure text styles</string>
    <string name="config_styles_summary">Show, hide and reorder text styles</string>
    <string name="config_instructions">\nLong-press then drag to reorder\n\nUse arrows to move to top/bottom\n\nToggle off to hide style from keyboard</string>
    <string name="label_send_key">Send</string>
    <string name="label_next_key">Next</string>
    <string name="label_go_key">GO</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>
    <string name="key_height">Key height (%)</string>

    <string-array name="settings_layout_names_array">
        <item>@string/kbd_layout_qwerty</item>
        <item>@string/kbd_layout_azerty</item>
        <item>@string/kbd_layout_qwertz</item>
    </string-array>

    <string-array name="settings_layout_values_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="settings_key_height_array">
        <item>1 - shortest</item>
        <item>2 - shorter</item>
        <item>3 - normal</item>
        <item>4 - taller</item>
        <item>5 - tallest</item>
    </string-array>

    <string-array name="settings_key_height_values_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="alternates_for_a">àáâäæãåā</string>
    <string name="alternates_for_c">çćč</string>
    <string name="alternates_for_e">èéêëēėę</string>
    <string name="alternates_for_i">îïíīįì</string>
    <string name="alternates_for_l">ł</string>
    <string name="alternates_for_n">ñń</string>
    <string name="alternates_for_o">ôöòóœøōõ</string>
    <string name="alternates_for_s">ßśš</string>
    <string name="alternates_for_u">ûüùúū</string>
    <string name="alternates_for_y">ÿ</string>
    <string name="alternates_for_z">žźż</string>

    <!-- style names -->
    <string name="name_frowny_faces">Frowny</string>
    <string name="name_happy_faces">Happy</string>
    <string name="name_thunder">Thunder</string>
    <string name="name_slashed">Slashed</string>
    <string name="name_mustache">Mustache</string>
    <string name="name_starry_night">StarryNight</string>
    <string name="name_lite_strikes">LiteStrikes</string>
    <string name="name_small_caps">Small Caps</string>
    <string name="name_mono">Monospace</string>
    <string name="name_olde_bold">Old English Bold</string>
    <string name="name_olde">Old English</string>
    <string name="name_upsidedown">Upside Down</string>
    <string name="name_clapclap">Clap Clap </string>
    <string name="name_organic">Organic</string>
    <string name="name_strikethrough">Strikeout</string>
    <string name="name_underlined">Underlined</string>
    <string name="name_filled_circles">Circles</string>
    <string name="name_filled_boxes">Boxes</string>
    <string name="name_clear_circles">Circles</string>
    <string name="name_clear_boxes">Boxes</string>
    <string name="name_ss_bold_italic">Bold Italic</string>
    <string name="name_ss_italic">Italic</string>
    <string name="name_ss_bold">Bold</string>
    <string name="name_serif_bold">Bold Serif</string>
    <string name="name_serif_italic">Italic Serif</string>
    <string name="name_serif_bold_italic">Bold Italic Serif</string>
    <string name="name_script">Script</string>
    <string name="name_script_bold">Bold Script</string>
    <string name="name_full_width">Wide</string>
    <string name="name_mirror">Mirrored</string>
    <string name="name_cutout">Cutout</string>
    <string name="name_regular">Regular</string>
    <string name="name_spongemock">Spongemock</string>
    <string name="name_supertiny">Supertiny</string>

</resources>
