<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/label_settings">
        <Preference
            android:icon="@drawable/pref_ic_sort"
            android:key="style_configs"
            android:summary="@string/config_styles_summary"
            android:title="@string/configure_styles"
            app:fragment="mf.irregex.settings.StyleConfigFragment" />

        <SwitchPreference
            android:icon="@drawable/pref_ic_vibrate"
            android:key="key_vibrations"
            android:summaryOff="@string/disabled"
            android:summaryOn="@string/enabled"
            android:title="@string/key_vibrations" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/settings_layout_names_array"
            android:entryValues="@array/settings_layout_values_array"
            android:icon="@drawable/pref_ic_keyboard_outline"
            android:key="kbd_layout"
            android:summary="%s"
            android:title="@string/setting_keyboard_layout" />

        <SeekBarPreference
            android:icon="@drawable/pref_ic_arrow_up_down"
            android:max="12"
            app:defaultValue="8"
            app:key="kdb_key_height"
            app:min="5"
            app:showSeekBarValue="true"
            app:title="@string/key_height" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/settings_appearance_names_array"
            android:entryValues="@array/settings_appearance_values_array"
            android:icon="@drawable/pref_ic_theme_light_dark"
            android:key="kbd_appearance"
            android:summary="%s"
            android:title="@string/appearance" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/label_about">
        <PreferenceScreen
            android:icon="@drawable/pref_ic_code"
            android:summary="@string/source_summary"
            android:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/MobileFirstLLC/irregular-expressions" />
        </PreferenceScreen>
        <Preference
            android:icon="@drawable/pref_ic_information_outline"
            android:summary="@string/versionName"
            android:title="@string/label_version" />
        <PreferenceScreen
            android:icon="@drawable/pref_ic_dev"
            android:summary="neea.dev (@nkrusch)"
            android:title="@string/label_developer">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/nkrusch" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
