<?xml version="1.0" encoding="utf-8"?>
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="10%p"
    android:keyHeight="7%p"
    android:horizontalGap="0dp"
    android:verticalGap="0dp">
    <Row>
        <Key android:keyEdgeFlags="left"
             android:codes="113" android:keyLabel="q"/>
        <Key android:codes="119" android:keyLabel="w"/>
        <Key android:codes="101" android:keyLabel="e" android:popupCharacters="@string/alternates_for_e" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="114" android:keyLabel="r"/>
        <Key android:codes="116" android:keyLabel="t"/>
        <Key android:codes="121" android:keyLabel="y" android:popupCharacters="@string/alternates_for_y" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="117" android:keyLabel="u" android:popupCharacters="@string/alternates_for_u" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="105" android:keyLabel="i" android:popupCharacters="@string/alternates_for_i" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="111" android:keyLabel="o" android:popupCharacters="@string/alternates_for_o" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="112" android:keyLabel="p"
            android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key android:horizontalGap="5%p" android:keyEdgeFlags="left" android:codes="97" android:keyLabel="a" android:popupCharacters="@string/alternates_for_a" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="115" android:keyLabel="s" android:popupCharacters="@string/alternates_for_s" android:popupKeyboard="@xml/keyboard_popup"/>
        <Key android:codes="100" android:keyLabel="d"/>
        <Key android:codes="102" android:keyLabel="f"/>
        <Key android:codes="103" android:keyLabel="g"/>
        <Key android:codes="104" android:keyLabel="h"/>
        <Key android:codes="106" android:keyLabel="j"/>
        <Key android:codes="107" android:keyLabel="k"/>
        <Key android:codes="108" android:keyLabel="l" android:popupCharacters="@string/alternates_for_l" android:popupKeyboard="@xml/keyboard_popup"
             android:keyEdgeFlags="right"/>
    </Row>
    <Row>
        <Key android:codes="@integer/kbd_shift_key" android:isModifier="true" android:isSticky="true" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
        <Key android:codes="122" android:keyLabel="z" android:popupCharacters="@string/alternates_for_z" android:popupKeyboard="@xml/keyboard_popup" />
        <Key android:codes="120" android:keyLabel="x" />
        <Key android:codes="99" android:keyLabel="c"  android:popupCharacters="@string/alternates_for_c" android:popupKeyboard="@xml/keyboard_popup" />
        <Key android:codes="118" android:keyLabel="v" />
        <Key android:codes="98" android:keyLabel="b" />
        <Key android:codes="110" android:keyLabel="n" android:popupCharacters="@string/alternates_for_n" android:popupKeyboard="@xml/keyboard_popup" />
        <Key android:codes="109" android:keyLabel="m" />
        <Key android:codes="@integer/kbd_backspace_delete" android:keyWidth="15%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="@integer/kbd_numeric_switch" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
        <Key android:codes="44" android:keyLabel="," />
        <Key android:codes="32" android:keyLabel=" " android:keyWidth="50%p" android:isRepeatable="true"/>
        <Key android:codes="46" android:keyLabel="."/>
        <Key android:codes="@integer/kbd_done_key" android:keyWidth="15%p" android:keyEdgeFlags="right"/>
    </Row>
</Keyboard>